2010-02-27  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml, ext/oci8/error.c, ext/oci8/oci8.h,
	  ext/oci8/ocinumber.c: fix for Oracle 8.0 client, which doesn't
	    have OCIMessageOpen() and OCIMessageGet().
	* ext/oci8/oci8.c: add a new method OCI8.error_message to get
	    a error message which depends on NLS_LANGUAGE.

2010-02-09  KUBO Takehiro  <kubo@jiubao.org>
	* dist-files: add ext/oci8/oranumber_util.c and
	    ext/oci8/oranumber_util.h.
	    (reported by Raimonds Simanovskis)

2010-02-07  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocinumber.c, ext/oci8/oranumber_util.c,
	  ext/oci8/oranumber_util.h: change the declaration of
	    oranumber_to_str() to prevent buffer overflow by
	    unexpected invalid Oracle number internal data.

2010-02-07  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c, ext/oci8/oci8.h: add oci8_raise_by_msgno()
	    to retrieve a Oracle error message which depends on NLS_LANGUAGE.
	* ext/oci8/oranumber_util.c, ext/oci8/oranumber_util.h,
	  ext/oci8/extconf.rb: add handwritten conversion functions from
	    OCINumber internal representation to string and vice versa.
	* ext/oci8/ocinumber.c: 1. use handwritten conversion functions
	    instead of OCI functions to convert OraNumber to string
	    and vice varse. 2. add OraNumber#dump.
	* test/test_oranumber.rb: add test cases to check conversion from
	    OraNumber to string and vice varse.

2010-02-02  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocinumber.c: fix to support NNUMBERS with scale larger
	    than 38 by using scientific number notation to convert OraNumber
	    to BigDecimal. OraNumber#to_i is also fixed.
	    (reported by Raimonds Simanovskis)

2010-01-24  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c: Use OCIErrorGet() to retrieve the error message
	    when the OCI return code is OCI_NO_DATA.
	    (reported by Raimonds Simanovskis)

2009-12-06  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/object.c: 1. fix segv when GC starts while initializing